--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "blocks-threejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.html",
+  "prebuild": "rm -rf dist",
   "scripts": {
-    "serve": "parcel src/index.html -p 8080",
-    "build": "parcel build src/index.html",
+    "serve": "parcel ./src/index.html -p 8080",
+    "build": "parcel build ./src/index.html --experimental-scope-hoisting",
     "lint": "eslint"
   },
   "keywords": [],
@@ -18,7 +19,7 @@
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   }
